# PrintPilot-Studio

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/bluetooth/: encoding.rs  image_decoder.rs  mod.rs  printer.rs  protocol.rs  renderer.rs
src/components/: Header.tsx  Sidebar.tsx  StatusCard.tsx
src/components/dashboard/: ConnectedDevice.tsx  PrinterStatus.tsx  QuickActions.tsx  RecentPrints.tsx  Statistics.tsx  WelcomeBanner.tsx
src/components/layout/: AppLayout.tsx  Sidebar.tsx  SplashScreen.tsx  Topbar.tsx
src/components/profile/: ProfileModal.tsx
src/context/: AppContext.tsx
src/hooks/: useImage.ts  usePrinter.ts  usePrinterMonitor.ts
src/lib/: imageProcessor.ts
src/pages/Documents/: index.tsx
src/pages/History/: index.tsx
src/pages/Home/: HomePage.tsx
src/pages/Images/: index.tsx
src/pages/Labels/: index.tsx
src/pages/Printer/: index.tsx
src/pages/QRCode/: index.tsx
src/pages/Templates/: index.tsx
src/pages/Text/: index.tsx
src/services/: bluetooth.service.ts  printer.service.ts
src/types/: printer.ts
