[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
image = "0.25"
ab_glyph = "0.2"
anyhow = "1"
bytes = "1"
crc = "3"
base64 = "0.22"

btleplug = "0.11"

tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"


tokio = { version = "1", features = ["full"] }
uuid = "1"
windows = { version = "0.61", features = [
    "Devices_Bluetooth",
    "Devices_Bluetooth_Advertisement",
    "Devices_Enumeration",
    "Storage_Streams",
    "Foundation",
] }
